docs/2020.1/studio/concepts/props-and-sets.md
:omit-from-search

# Props and sets

Flipside Studio is built around the idea that virtual productions happen on virtual sets. It's like being live on a TV/film set, but inside your animated show. To learn about importing custom characters, check out the [Flipside Creator Tools](/docs/2020.1/creator-tools).

## Built-in props

Flipside Studio includes dozens of built-in props for getting started quickly. You can find these under the **Set Builder** menu.

### Show Tools

The first category of props are called **Show Tools**, which are aimed at helping directors and actors produce the show. These include things like the teleprompter, camera switcher, camera, light, preview monitor, slideshow, and actor mark.

### Skies

The **Skies** category is another special category, which contains a list of available skies. Outdoor sets can go from day to night just by changing the sky.

### Imported props

Imported props are also found under the **Set Builder** menu, under the **My Objects** category. Props can be imported as OBJ files through your account on the Flipside XR website.

Imported props are somewhat limited at this time, because you don't have the flexibility of the Unity editor to define their behaviours, such as physics colliders, material properties, or other interactive effects. However, they can be a quick solution when you just need a single prop for a particular scene.

## Props built into sets

Props can also be built directly into sets, turning any number of otherwise static objects on a set into interactive elements that can be grabbed, thrown, or used in any number of ways. These props can also have additional capabilities attached to them when an actor presses their index finger trigger button while holding them, for example, a gun that can shoot or a magic wand that can produce a special effect on command.

## Other types of interactivity

In the real world, we don't have to think about the affordances found on a TV/film set, like doors opening and closing. We take those things for granted in the real world. But on a virtual set, those become important to consider.

Flipside Studio's companion software, [Flipside Creator Tools](/docs/2020.1/creator-tools), a plugin for the Unity game engine, provides a wide variety of components that can be used to build simple interactivity like a door opening, all the way up to complex mini-games complete with scorekeeping.

This set of components lets you craft richer interactivity into your sets, bringing your sets to a new level.

## Saved setups

Sets can quickly be configured into new arrangements from the **Set Builder** menu. And in reality, shows often shoot many scenes in the same set or location. For this reason, Flipside Studio has the ability to save setups, which are different configurations of props and cameras on a set.

Setups can be updated or removed, and when a recording is loaded, loading a saved setup of the same set will only replace the cameras and leave the props as they were in the recording.

---

Next: [[: Recording]]
